--- a/assets/scss/members.scss
+++ b/assets/scss/members.scss
@@ -169,9 +169,9 @@ $al-members-card-border: rgba(196, 225, 255, 0.22);
       .nm { color: #14b8a6; }
     }
     &[data-tier="ruby"] {
-      border-top: 3px solid #e0115f;
+      border-top: 3px solid #ff6e71;
       padding-top: calc(1.25rem - 3px);
-      .nm { color: #e0115f; }
+      .nm { color: #ff6e71; }
     }
     &[data-tier="gold"] {
       border-top: 3px solid #e9b94a;
